# compnal

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  LICENSE  MANIFEST.in  README.md  codecov.yml  compile.txt  pyproject.toml  setup.cfg  setup.py  test.hdf5
.github/workflows/: cpp_test.yml  docs.yml  publish.yml  python_test.yml
compnal/: CMakeLists.txt  __init__.py
compnal/base_compnal/: pybind11_main.cpp  pybind_main.cpp
compnal/base_compnal/include/: pybind_classical_model.hpp  pybind_classical_monte_carlo.hpp  pybind_lattice.hpp  pybind_solver_parameters.hpp  pybind_utility.hpp
compnal/base_compnal/src/: pybind11_blas.hpp  pybind11_lattice.hpp  pybind11_model.hpp  pybind11_solver.hpp
compnal/lattice/: __init__.py  boundary_condition.py  chain.py  cubic.py  infinite_range.py  lattice_info.py  square.py
compnal/model/: __init__.py
compnal/model/classical/: __init__.py  ising.py  model_info.py  poly_ising.py  util.py
compnal/solver/: __init__.py  classical_monte_carlo.py  cmc.py  parameters.py  result.py
compnal/utility/: fft.py
cpp_compnal/src/blas/: all.hpp  blas_algorithm.hpp  compressed_row_storage.hpp  conjugate_gradient.hpp  double_array_sparse_matrix.hpp  inverse_iteration.hpp  lanczos.hpp  lapack_wrapper.hpp  matrix_vector_product.hpp  orthonormalize.hpp  vector_vector_operation.hpp
cpp_compnal/src/interaction/: all.hpp  polynomial_any_interaction.hpp  quadratic_any_interaction.hpp
cpp_compnal/src/interaction/classical/: polynomial_any.hpp  quadratic_any.hpp
cpp_compnal/src/lattice/: all.hpp  any_lattice.hpp  base_one_dimensional_lattice.hpp  base_three_dimensional_lattice.hpp  base_two_dimensional_lattice.hpp  boundary_condition.hpp  chain.hpp  cubic.hpp  infinite_range.hpp  square.hpp
cpp_compnal/src/model/: all.hpp
cpp_compnal/src/model/classical/: all.hpp  ising.hpp  polynomial_ising.hpp
cpp_compnal/src/model/quantum/: all.hpp  base_electron.hpp  base_spin.hpp  base_spin_electron.hpp  base_spin_multi_electron.hpp  electron.hpp  heisenberg.hpp  hubbard.hpp  kondo_lattice.hpp
cpp_compnal/src/solver/: all.hpp  classical_monte_carlo.hpp  exact_diagonalization.hpp
cpp_compnal/src/solver/cmc_utility/: algorithm.hpp  all.hpp  base_system.hpp  ssf_updater.hpp  system_ising_any_lattice.hpp  system_ising_chain.hpp  system_ising_cubic.hpp  system_ising_infinite_range.hpp  system_ising_square.hpp  system_poly_ising_any_lattice.hpp  system_poly_ising_chain.hpp  system_poly_ising_cubic.hpp  system_poly_ising_infinite_range.hpp  system_poly_ising_square.hpp
cpp_compnal/src/solver/ed_utility/: all.hpp  ed_matrix_comp.hpp  mat_comp_heisenberg.hpp  mat_comp_hubbard.hpp  mat_comp_hubbard_chain.hpp  mat_comp_kondo_lattice.hpp
cpp_compnal/src/solver/utility_cmc/: algorithm.hpp  all.hpp  base_system.hpp  ssf_updater.hpp  system_ising_any_lattice.hpp  (+9 more)
cpp_compnal/src/utility/: all.hpp  hash.hpp  integer.hpp  random_number.hpp  sort.hpp  type.hpp
cpp_compnal/tests/: test_main.cpp  test_settings.hpp
cpp_compnal/tests/blas/: all.hpp  test_crs.hpp
cpp_compnal/tests/interaction/: all.hpp  test_polynomial_any_interaction.hpp  test_quadratic_any_interaction.hpp
cpp_compnal/tests/lattice/: all.hpp  test_any_lattice.hpp  test_base_one_dimensional_lattice.hpp  test_base_three_dimensional_lattice.hpp  test_base_two_dimensional_lattice.hpp  test_infinite_range.hpp
cpp_compnal/tests/model/: all.hpp
cpp_compnal/tests/solver/: all.hpp  test_cmc_ising.hpp  test_cmc_polynomial_ising.hpp  test_ed_hubbard.hpp
cpp_compnal/tests/utility/: all.hpp  test_integer.hpp
dependencies/: FetchEigen.cmake  FetchPybind11.cmake
include/: CMakeLists.txt
include/lattice/: all.hpp  boundary_condition.hpp  chain.hpp  cubic.hpp  infinite_range.hpp  infinte_range.hpp  square.hpp
include/model/classical/: all.hpp  ising.hpp  polynomial_ising.hpp
include/model/utility/: variable.hpp
include/solver/: parameter_class.hpp
include/solver/classical_monte_carlo/: bond_updater.hpp  classical_monte_carlo.hpp  heat_bath_pt.hpp  heat_bath_ssf.hpp  heat_bath_updater.hpp  metropolis_ssf.hpp  metropolis_updater.hpp  metropolis_pt.hpp  metropolis_ssf.hpp  multi_updater.hpp  parallel_tempering.hpp  single_spin_flip.hpp  single_spin_flip_updater.hpp  single_updater.hpp  suwa_todo_ssf.hpp
include/solver/classical_monte_carlo/system/: all.hpp  ising_chain.hpp  ising_cubic.hpp  ising_infinite_range.hpp  ising_square.hpp  poly_ising_chain.hpp  poly_ising_cubic.hpp  poly_ising_infinite_range.hpp  poly_ising_square.hpp  template_system.hpp
include/utility/: all.hpp  combination.hpp  random.hpp  statistics.hpp
tests/: CMakeLists.txt
tests/cpp_tests/: cpp_test  test_main.cpp
tests/cpp_tests/lattice/: all.hpp  test_chain.hpp  test_cubic.hpp  test_infinite_range.hpp  test_square.hpp
tests/cpp_tests/model/: all.hpp
tests/cpp_tests/model/classical/: test_ising.hpp  test_polynomial_ising.hpp
tests/cpp_tests/model/utility/: test_variable.hpp
tests/cpp_tests/solver/: all.hpp
tests/cpp_tests/solver/classical_monte_carlo/: all.hpp  test_classical_monte_carlo.hpp  test_classical_monte_carlo_multi_flip.hpp  test_classical_monte_carlo_parallel_tempering.hpp  test_classical_monte_carlo_single_flip.hpp
tests/cpp_tests/solver/classical_monte_carlo/system/: test_system_ising.hpp  test_system_ising_chain.hpp  test_system_ising_cubic.hpp  test_system_ising_infinite_range.hpp  test_system_ising_square.hpp  test_system_poly_ising_chain.hpp  test_system_poly_ising_cubic.hpp  test_system_poly_ising_infinite_range.hpp  test_system_poly_ising_square.hpp
tests/cpp_tests/utility/: all.hpp  test_combination.hpp  test_statistics.hpp
tests/py_tests/test_lattice/: test_boundary_condition.py  test_chain.py  test_cubic.py  test_infinite_range.py  test_lattice_info.py  test_square.py
tests/py_tests/test_model/classical/: test_classical_model_info.py  test_ising.py  test_poly_ising.py
tests/py_tests/test_solver/: test_classical_monte_carlo.py  test_cmc.py  test_cmc_pt.py  test_cmc_result.py  test_cmc_ssf.py
tests/py_tests/test_utility/: test_fft.py
(+11 files in other folders)
